--- a/charts/neodax/templates/config-cm.yaml
+++ b/charts/neodax/templates/config-cm.yaml
@@ -1,3 +1,4 @@
+{{- if .Values.config }}
 apiVersion: v1
 kind: ConfigMap
 metadata:
@@ -11,3 +12,4 @@ metadata:
 data:
   finex.yaml: |-
     {{- .Values.config | nindent 4 }}
+{{- end }}
